==> HANGYUAN2001/Data_Science_Project_EMATM0047/Model Deployment/stm32h7/STM32/Core/Src/lcd_spi_200.c <==
#include "lcd_spi_200.h"
#define LCD_SPI hspi6

void LCD_WriteCommand(uint8_t lcd_command)
{
    LCD_DC_Command; 

    HAL_SPI_Transmit(&LCD_SPI, &lcd_command, 1, 1000);
}

void LCD_WriteData_8bit(uint8_t lcd_data)
{
    LCD_DC_Data; 

    HAL_SPI_Transmit(&LCD_SPI, &lcd_data, 1, 1000); 
}

void LCD_WriteData_16bit(uint16_t lcd_data)
{
    uint8_t lcd_data_buff[2]; 
    LCD_DC_Data;              

    lcd_data_buff[0] = lcd_data >> 8; 
    lcd_data_buff[1] = lcd_data;

    HAL_SPI_Transmit(&LCD_SPI, lcd_data_buff, 2, 1000); 
}

void LCD_WriteBuff(uint16_t *DataBuff, uint16_t DataSize)
{
    LCD_DC_Data; 

  
    LCD_SPI.Init.DataSize = SPI_DATASIZE_16BIT;
    HAL_SPI_Init(&LCD_SPI);

    HAL_SPI_Transmit(&LCD_SPI, (uint8_t *)DataBuff, DataSize, 1000); 


    LCD_SPI.Init.DataSize = SPI_DATASIZE_8BIT; 
    HAL_SPI_Init(&LCD_SPI);
}

void SPI_LCD_Init(void)
{
    MX_SPI6_Init(); 

    HAL_Delay(10);           
    LCD_WriteCommand(0x36);   
    LCD_WriteData_8bit(0x00); 

    LCD_WriteCommand(0x3A);   
    LCD_WriteData_8bit(0x05); 

	
    LCD_WriteCommand(0xB2);
    LCD_WriteData_8bit(0x0C);
    LCD_WriteData_8bit(0x0C);
    LCD_WriteData_8bit(0x00);
    LCD_WriteData_8bit(0x33);
    LCD_WriteData_8bit(0x33);

    LCD_WriteCommand(0xB7);  
    LCD_WriteData_8bit(0x35); 

    LCD_WriteCommand(0xBB);  
    LCD_WriteData_8bit(0x19); 

    LCD_WriteCommand(0xC0);
    LCD_WriteData_8bit(0x2C);

    LCD_WriteCommand(0xC2);  
    LCD_WriteData_8bit(0x01); 

    LCD_WriteCommand(0xC3);   
    LCD_WriteData_8bit(0x12); 

    LCD_WriteCommand(0xC4);   
    LCD_WriteData_8bit(0x20); 

    LCD_WriteCommand(0xC6);   
    LCD_WriteData_8bit(0x0F); 

    LCD_WriteCommand(0xD0);   
    LCD_WriteData_8bit(0xA4); 
    LCD_WriteData_8bit(0xA1); 

    LCD_WriteCommand(0xE0); 
    LCD_WriteData_8bit(0xD0);
    LCD_WriteData_8bit(0x04);
    LCD_WriteData_8bit(0x0D);
    LCD_WriteData_8bit(0x11);
    LCD_WriteData_8bit(0x13);
    LCD_WriteData_8bit(0x2B);
    LCD_WriteData_8bit(0x3F);
    LCD_WriteData_8bit(0x54);
    LCD_WriteData_8bit(0x4C);
    LCD_WriteData_8bit(0x18);
    LCD_WriteData_8bit(0x0D);
    LCD_WriteData_8bit(0x0B);
    LCD_WriteData_8bit(0x1F);
    LCD_WriteData_8bit(0x23);

    LCD_WriteCommand(0xE1); 
    LCD_WriteData_8bit(0xD0);
    LCD_WriteData_8bit(0x04);
    LCD_WriteData_8bit(0x0C);
    LCD_WriteData_8bit(0x11);
    LCD_WriteData_8bit(0x13);
    LCD_WriteData_8bit(0x2C);
    LCD_WriteData_8bit(0x3F);
    LCD_WriteData_8bit(0x44);
    LCD_WriteData_8bit(0x51);
    LCD_WriteData_8bit(0x2F);
    LCD_WriteData_8bit(0x1F);
    LCD_WriteData_8bit(0x1F);
    LCD_WriteData_8bit(0x20);
    LCD_WriteData_8bit(0x23);

    LCD_WriteCommand(0x21); 

    
    LCD_WriteCommand(0x11); 
    HAL_Delay(120);        

    LCD_WriteCommand(0x29); 


    LCD_SetDirection(Direction_V); 
    LCD_SetBackColor(LCD_BLACK);  
    LCD_SetColor(LCD_WHITE);      
    LCD_Clear();             

    LCD_SetAsciiFont(&ASCII_Font24); 
    LCD_ShowNumMode(Fill_Zero);     


    LCD_Backlight_ON; 
}

void LCD_Clear(void)
{
    LCD_SetAddress(0, 0, LCD.Width - 1, LCD.Height - 1); 

    LCD_DC_Data; 

   
    LCD_SPI.Init.DataSize = SPI_DATASIZE_16BIT; 
    HAL_SPI_Init(&LCD_SPI);

    LCD_SPI_Transmit(&LCD_SPI, LCD.BackColor, LCD.Width * LCD.Height); 

    LCD_SPI.Init.DataSize = SPI_DATASIZE_8BIT; 
    HAL_SPI_Init(&LCD_SPI);
}

void LCD_ClearRect(uint16_t x, uint16_t y, uint16_t width, uint16_t height)
{
    LCD_SetAddress(x, y, x + width - 1, y + height - 1); 

    LCD_DC_Data; 

    
    LCD_SPI.Init.DataSize = SPI_DATASIZE_16BIT; 
    HAL_SPI_Init(&LCD_SPI);

    LCD_SPI_Transmit(&LCD_SPI, LCD.BackColor, width * height); 


    LCD_SPI.Init.DataSize = SPI_DATASIZE_8BIT; 
    HAL_SPI_Init(&LCD_SPI);
}

void LCD_FillRect(uint16_t x, uint16_t y, uint16_t width, uint16_t height)
{
    LCD_SetAddress(x, y, x + width - 1, y + height - 1); 

    LCD_DC_Data; 

    
    LCD_SPI.Init.DataSize = SPI_DATASIZE_16BIT; 
    HAL_SPI_Init(&LCD_SPI);

    LCD_SPI_Transmit(&LCD_SPI, LCD.Color, width * height);

  
    LCD_SPI.Init.DataSize = SPI_DATASIZE_8BIT; 
    HAL_SPI_Init(&LCD_SPI);
}

void _LCD_FillRect(uint16_t x, uint16_t y, uint16_t width, uint16_t height, uint16_t * _LCD_Buff)
{

    uint32_t i, j;

    for (i = x; i < x + width; i++)
    {
        for (j = y; j < y + height; j++)
        {
            _LCD_Buff[i * LCD.Width + j] = LCD.Color;
        }
    }
}
